# zephyr-pump

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  LOG.md  Makefile  README.md  TODO.md  dev.sh  format.sh  west.yml
.github/workflows/: firmware.yml
app/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  sysbuild.conf
app/src/: antenna.c  main.c  motor.c  speaker.c  update.c  wifi.c
docs/: DESIGN.md  LOG.md  OTA.md  SUGGESTIONS.md
