cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(pump_app)
target_sources(app PRIVATE src/main.c src/led.c src/restart.c)
target_sources_ifdef(CONFIG_APP_SPEAKER app PRIVATE src/speaker.c)
target_sources_ifdef(CONFIG_APP_MOTOR app PRIVATE src/motor.c)
target_sources_ifdef(CONFIG_APP_ANTENNA app PRIVATE src/antenna.c)
target_sources_ifdef(CONFIG_APP_WIFI app PRIVATE src/wifi.c)
target_sources_ifdef(CONFIG_APP_UPDATE app PRIVATE src/update.c)
